    * 3555 FIX: esx_vsphere_sensors: fixed incorrect default parameter during service discovery...
    * 3665 FIX: hitachi_hnas_*: Fixed service discovery on some devices (e.g. HM800)
    * 3666 FIX: ups_*: Fixed discovery for Vision UPS devices
    * 3692 FIX: f5_bigip_conns: fixed empty data handling
    * 3707 FIX: oracle_tablespaces: cleanup...

    Multisite:
    * 3662 FIX: Fixed creation/editing of dashboards (regression since 1.2.8p5)
    * 3668 FIX: Fixed slow loading of GUI pages when using a localized GUI
    * 3669 FIX: LDAP: Fixed very long running LDAP sync when using group based sync plugins
    * 3670 FIX: Fixed empty AV PDF report when exporting it from a quicksearch result view

    WATO:
    * 3152 FIX: lvm_vgs: fixed exception in host-specific settings if rule for LVM groups is set

    HW/SW-Inventory:
    * 3663 FIX: Added missing system manufacturer filter/painter
    * 3664 FIX: Fixed not working hardware/system serial and model painters and filters...


1.2.8p5:
    Core & Setup:
    * 3149 FIX: fixed rare crash if alert handling tried to long non-latin characters

    Checks & Agents:
    * 3541 FIX: esx_vsphere_hostsystem.state: no longer crashes when data is missing...
    * 3590 FIX: mssql.vbs: Completely removed plugin timeout...
    * 3635 FIX: get_average: fixed overflow error
    * 3653 FIX: fileinfo.groups: Fixed UNKNOWN shown in WATO discovery when configured as manual check
    * 3636 FIX: juniper_fru: fixed present state handling
    * 3142 FIX: windows agent: fixed rare crash when wmi query for uptime fails...
    * 3637 FIX: ipmi_sensors: fixed sensor discovery if sensor is unknown and perfdata handling
    * 3545 FIX: netapp_api_vs_traffic: fixed crash when NFSv4.1 information was available
    * 3143 FIX: windows agent: fixed some minor memory and handle leaks
    * 3144 FIX: bugfix: replacing pipe symbol in plugin output was broken
    * 3638 FIX: cisco_qos: fixed wrong unit handling