@@ -28,24 +28,26 @@ import defaults, config, userdb
 from lib import *
 from mod_python import apache
 import os, time
+import traceback
 
 try:
     from hashlib import md5
 except ImportError:
     from md5 import md5 # deprecated with python 2.5
 
-def site_cookie_name(site_id = None):
-    if not site_id:
-        url_prefix = defaults.url_prefix
-    else:
-        url_prefix = config.site(site_id)['url_prefix']
+
+def auth_cookie_name():
+    return 'auth%s' % site_cookie_suffix()
+
+
+def site_cookie_suffix():
+    url_prefix = defaults.url_prefix
 
     # Strip of eventual present "http://<host>". DIRTY!
     if url_prefix.startswith('http:'):
         url_prefix = url_prefix[url_prefix[7:].find('/') + 7:]
 
-    name = os.path.dirname(url_prefix).replace('/', '_')
-    return 'auth%s' % name
+    return os.path.dirname(url_prefix).replace('/', '_')
 
 # Reads the auth secret from a file. Creates the files if it does
 # not exist. Having access to the secret means that one can issue valid
@@ -68,6 +70,7 @@ def load_secret():
 
     return secret
 
+
 # Load the password serial of the user. This serial identifies the current config
 # state of the user account. If either the password is changed or the account gets
 # locked the serial is increased and all cookies get invalidated.
@@ -76,10 +79,16 @@ def load_secret():
 def load_serial(username):
     return userdb.load_custom_attr(username, 'serial', saveint, 0)
 
-# Generates the hash to be added into the cookie value
-def generate_hash(username, now, serial):
+
+def generate_auth_hash(username, now):
+    return generate_hash(username, username.encode("utf-8") + str(now))
+
+
+# Generates a hash to be added into the cookie value
+def generate_hash(username, value):
     secret = load_secret()
-    return md5(username.encode("utf-8") + str(now) + str(serial) + secret).hexdigest()
+    serial = load_serial(username)
+    return md5(value + str(serial) + secret).hexdigest()
 
 
 def del_auth_cookie():
@@ -93,36 +102,93 @@ def del_auth_cookie():
                 html.del_cookie(cookie_name)
 
 
-def auth_cookie_value(username, serial):
+def auth_cookie_value(username):
     now = str(time.time())
-    return username + ':' + now + ':' + generate_hash(username, now, serial)
+    return ":".join([ username, now, generate_auth_hash(username, now) ])
 
-def set_auth_cookie(username, serial):
-    html.set_cookie(site_cookie_name(), auth_cookie_value(username, serial))
 
-def renew_cookie(cookie_name, username, serial):
+def invalidate_auth_session():
+    if config.single_user_session != None:
+        userdb.invalidate_session(config.user_id)
+
+    del_auth_cookie()
+
+
+def renew_auth_session(username):
+    if config.single_user_session != None:
+        userdb.refresh_session(username)
+
+    set_auth_cookie(username)
+
+
+def create_auth_session(username):
+    if config.single_user_session != None:
+        session_id = userdb.initialize_session(username)
+        set_session_cookie(username, session_id)
+
+    set_auth_cookie(username)
+
+
+def set_auth_cookie(username):
+    html.set_cookie(auth_cookie_name(), auth_cookie_value(username))
+
+
+def set_session_cookie(username, session_id):
+    html.set_cookie(session_cookie_name(), session_cookie_value(username, session_id))
+
+
+def session_cookie_name():
+    return 'session%s' % site_cookie_suffix()
+
+
+def session_cookie_value(username, session_id):
+    value = username.encode("utf-8") + ":" + session_id
+    return value + ":" + generate_hash(username, value)
+
+
+def get_session_id_from_cookie(username):
+    raw_value = html.cookie(session_cookie_name(), "::")
+    cookie_username, session_id, cookie_hash = raw_value.split(':', 2)
+
+    if cookie_username.decode("utf-8") != username \
+       or cookie_hash != generate_hash(username, username.encode("utf-8") + ":" + session_id):
+        #logger(LOG_ERR, "Invalid session: %s, Cookie: %r" % (username, raw_value))
+        return ""
+
+    return session_id
+
+
+def renew_cookie(cookie_name, username):
     # Do not renew if:
     # a) The _ajaxid var is set
     # b) A logout is requested
     if (html.myfile != 'logout' and not html.has_var('_ajaxid')) \
-       and cookie_name == site_cookie_name():
-        # TODO: Reenable this for easier debugging when log levels can be configured easily
-        #html.log("Renewing auth cookie (%s.py, vars: %r)" % (html.myfile, html.vars))
-        set_auth_cookie(username, serial)
+       and cookie_name == auth_cookie_name():
+        # TODO: uncomment this once log level can be configured
+        #logger(LOG_DEBUG, "Renewing auth cookie (%s.py, vars: %r)" % (html.myfile, html.vars))
+        renew_auth_session(username)
 
 
 def check_auth_cookie(cookie_name):
     username, issue_time, cookie_hash = parse_auth_cookie(cookie_name)
-    serial = check_parsed_auth_cookie(username, issue_time, cookie_hash)
+    check_parsed_auth_cookie(username, issue_time, cookie_hash)
 
     # Check whether or not there is an idle timeout configured, delete cookie and
     # require the user to renew the log when the timeout exceeded.
-    if userdb.login_session_timed_out(username, issue_time):
+    if userdb.login_timed_out(username, issue_time):
         del_auth_cookie()
         return
 
+    # Check whether or not a single user session is allowed at a time and the user
+    # is doing this request with the currently active session.
+    if config.single_user_session != None:
+        session_id = get_session_id_from_cookie(username)
+        if not userdb.is_valid_user_session(username, session_id):
+            del_auth_cookie()
+            return
+
     # Once reached this the cookie is a good one. Renew it!
-    renew_cookie(cookie_name, username, serial)
+    renew_cookie(cookie_name, username)
 
     if html.myfile != 'user_change_pw':
         result = userdb.need_to_change_pw(username)
@@ -134,20 +200,17 @@ def check_auth_cookie(cookie_name):
 
 
 def parse_auth_cookie(cookie_name):
-    username, issue_time, cookie_hash = html.cookie(cookie_name, '::').split(':', 2)
-    username = username.decode("utf-8")
-    return username, float(issue_time), cookie_hash
+    raw_value = html.cookie(cookie_name, "::")
+    username, issue_time, cookie_hash = raw_value.split(':', 2)
+    return username.decode("utf-8"), float(issue_time), cookie_hash
 
 
 def check_parsed_auth_cookie(username, issue_time, cookie_hash):
     if not userdb.user_exists(username):
         raise MKAuthException(_('Username is unknown'))
 
-    serial = load_serial(username)
-    if cookie_hash != generate_hash(username, issue_time, serial):
+    if cookie_hash != generate_auth_hash(username, issue_time):
         raise MKAuthException(_('Invalid credentials'))
-
-    return serial
 
 
 def auth_cookie_is_valid(cookie_name):
@@ -178,7 +241,7 @@ def check_auth_http_header():
     if user_id:
         user_id = user_id.decode("utf-8")
         serial = load_serial(user_id)
-        renew_cookie(site_cookie_name(), user_id, serial)
+        renew_cookie(auth_cookie_name(), user_id, serial)
     else:
         user_id = None
     return user_id
@@ -198,9 +261,8 @@ def check_auth():
                     user_id = check_auth_cookie(cookie_name)
                     break
                 except Exception, e:
-                    import traceback
-                    html.log("Exception occured while checking cookie '%s': %s" %
-                                                (cookie_name, traceback.format_exc()))
+                    logger(LOG_ERR, 'Exception while checking cookie %s: %s' %
+                                        (cookie_name, traceback.format_exc()))
 
     if (user_id != None and type(user_id) != unicode) or user_id == u'':
         raise MKInternalError(_("Invalid user authentication"))
@@ -239,14 +301,18 @@ def do_login():
                 # from mixed case to lower case.
                 username = result
 
+                # When single user session mode is enabled, check that there is not another
+                # active session
+                userdb.ensure_user_can_init_session(username)
+
                 # reset failed login counts
                 userdb.on_succeeded_login(username)
 
                 # The login succeeded! Now:
                 # a) Set the auth cookie
                 # b) Unset the login vars in further processing
-                # c) Show the real requested page (No redirect needed)
-                set_auth_cookie(username, load_serial(username))
+                # c) Redirect to really requested page
+                create_auth_session(username)
 
                 # Never use inplace redirect handling anymore as used in the past. This results
                 # in some unexpected situations. We simpy use 302 redirects now. So we have a
@@ -334,8 +400,7 @@ def normal_login_page(called_directly = True):
     return apache.OK
 
 def page_logout():
-    # Remove eventual existing cookie
-    del_auth_cookie()
+    invalidate_auth_session()
 
     if config.auth_type == 'cookie':
         html.http_redirect(defaults.url_prefix + 'check_mk/login.py')
